# Ethara.AI

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  Makefile  README.md  SPECIFICATION.md  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .coverage  .env.example  main.py  mypy.ini  nixpacks.toml  pyproject.toml  railway.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_05_16_2313-61c84e453f9c_initial_schema.py  2026_05_16_2330-0223b249cdd5_add_user_model.py  2026_05_17_0001-a1b2c3d4e5f6_add_project_models.py  2026_05_17_0002-b2c3d4e5f6a1_add_task_model.py
apps/api/app/: main.py
apps/api/app/api/: __init__.py
apps/api/app/auth/: password.py  tokens.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: base.py  registry.py  session.py
apps/api/app/middleware/: __init__.py  exceptions.py  logging.py  request_id.py
apps/api/app/models/: activity_log.py  project.py  project_member.py  refresh_token.py  task.py  user.py
apps/api/app/repositories/: activity_repo.py  project_members_repo.py  projects_repo.py  refresh_token_repo.py  tasks_repo.py  user_repo.py
apps/api/app/schemas/: auth.py  dashboard.py  members.py  projects.py  tasks.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: activity_service.py  (+5 more)
apps/api/tests/: conftest.py  test_auth.py  test_auth_service.py  test_bootstrap.py  test_dashboard.py  test_dashboard_service.py  test_health.py  test_project_service.py  test_projects.py  test_task_service.py  test_tasks.py  test_tasks_routes_coverage.py
(+71 files in other folders)
