[project]
name = "ttm-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  "orjson>=3.10",
  "httpx>=0.27",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "factory-boy>=3.3",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "types-passlib",
  "pip-audit>=2.7",
  "types-python-jose>=3.5.0.20260408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
